--- a/examples/client/index.html
+++ b/examples/client/index.html
@@ -5,7 +5,7 @@
   <title></title>
   <script src="/socket.io/socket.io.js"></script>
   <script src="./client.js"></script>
-  <script src="./dist/warp.js"></script>
+  <script src="./dist/adawarp.js"></script>
 </head>
 <body>
   <h1>Welcome to Wormhole</h1>
